# cm-platform-tools

./: README.md
.github/workflows/: new-service-release.yml  prod-build-service.yml  staging-build-services.yml
services/cm-messenger/: Dockerfile  README.md  config.py  emailer.py  messenger.py  models.py  pyproject.toml
services/cm-messenger/templates/: lab_ready_default.html
