[project]
name = "cm-messenger"
version = "0.1.0"
description = "Cloud Mentor messenger service (email first)"
authors = [{name = "Cloud Mentor"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "sib-api-v3-sdk>=7.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
